[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = " 0.4.26", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"]}
uuid = { version = "1.4.1", features = ["serde", "v4"] } 
validator = { version = "0.16.1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower = "0.5.0"
time = "0.3.0"
tower-http = { version = "0.5.2", features = ["cors", "trace"]}
tracing-subscriber = { version = "0.3.18"}
aes = "0.7"
block-modes = "0.8"
rsa = "0.9"
rand = "0.8"
base64 = "0.22.1"
